add swcaffe logo

--- a/_includes/pub_highlight.html
+++ b/_includes/pub_highlight.html
@@ -1,10 +1,10 @@
 <div class="media">
   <a class="pull-left" href="#">
-    <img class="media-object" src="assets/img/swdnnlogo.png" width="96px" height="96px"/>
+    <img class="media-object" src="assets/img/swcaffelogo.png" width="96px" height="96px"/>
   </a>
   <div class="media-body">
     <p class="media-heading">
-      <strong>SWCaffe: A Deep Learning Framework for the Sunway TaihuLight}</strong><br/><br />
+      <strong>SWCaffe: A Deep Learning Framework for the Sunway TaihuLight</strong><br/>Jiarui Fang<br />
       <a href="assets/pdf/swcaffe.pdf">[Technical Report PDF]</a>
     </p>
     <p class="abstract-text">
